pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: django
    namespace: react-django-ns
spec:
    containers:
      - name: django-ctr
        image: rushis750/django:latest
        ports:
            - containerPort: 8001
