service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-svc
  namespace: react-django-ns
spec:
  type: NodePort
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8001
      nodePort: 31341
